# Chess

./: .gitignore  .gitmodules  Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  Piece.cpp  Piece.h  README.md  main.cpp
API/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
resources/shaders/: BoardFragmentShader.fs  BoardVertexShader.vs  FragmentShader.fs  VertexShader.vs
